turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: not found: value baisseBosse
    baisseBosse()
    ^