turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  def setCouleurSol(couleur : Color) {
    setCouleurBrosse(couleur)
    baisseBosse()
    leveBrosse()
  }

  setCouleurSol(Color.black)
}